--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@nestjs/platform-express": "^7.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mysql": "^2.15.15",
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -43,6 +45,7 @@
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
     "@types/node": "^13.13.30",
+    "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
