--- a/package.json
+++ b/package.json
@@ -27,16 +27,19 @@
     "@nestjs/platform-express": "^7.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mysql": "^2.15.15",
+    "@types/nodemailer": "^6.4.0",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.15",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
