--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mysql": "^2.15.15",
     "@types/nodemailer": "^6.4.0",
+    "@types/validator": "^13.1.0",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
@@ -43,7 +44,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
