--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mysql": "^2.15.15",
     "@types/nodemailer": "^6.4.0",
     "@types/validator": "^13.1.0",
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
