--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.12",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.15",
