--- a/.eslintrc
+++ b/.eslintrc
@@ -64,6 +64,7 @@
         "ObjectPattern": { "multiline": true },
         "ImportDeclaration": "never",
         "ExportDeclaration": { "multiline": true, "minProperties": 3 }
-    }]
+    }],
+    "no-return-await": ["error"]
   }
 }
