added reports and open api intergration

--- a/package.json
+++ b/package.json
@@ -24,18 +24,19 @@
     "lint"
   ],
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
+    "@nestjs/common": "^7.6.5",
     "@nestjs/core": "^7.0.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/serve-static": "^2.1.4",
+    "@nestjs/swagger": "^4.7.10",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mysql": "^2.15.15",
     "@types/nodemailer": "^6.4.0",
     "@types/validator": "^13.1.0",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
@@ -49,6 +50,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.1",
     "validator": "^13.1.17"
   },
