--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "validator": "^13.1.17"
   },
   "devDependencies": {
+    "@compodoc/compodoc": "^1.1.11",
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
